# HistogramTracker

./: CMakeLists.txt  config.yaml  readme.md
include/: GlobalConfig.h  Model.h  Pose.h  PoseEstimate.h  Region.h  Segment.h  Solver.h  Viz.h
src/: Model.cpp  ModelCV.cpp  OcvYamlConfig.cpp  Pose.cpp  PoseEstimate.cpp  Region.cpp  Segment.cpp  Solver.cpp  Viz.cpp  main.cpp
